--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,8 +8,9 @@ COPY . .
 RUN CGO_ENABLED=0 GOOS=linux go build -o /ojs-server ./cmd/ojs-server
 
 FROM alpine:3.19
-RUN apk --no-cache add ca-certificates
+RUN apk --no-cache add ca-certificates && \
+    adduser -D -u 1001 ojs
 COPY --from=builder /ojs-server /ojs-server
-
+USER ojs
 EXPOSE 8080
 ENTRYPOINT ["/ojs-server"]
