chore: add CODEOWNERS, expand golangci-lint rules, and enforce auth in Makefile
Add CODEOWNERS for backend-maintainers team ownership. Enable gocyclo,
unparam, bodyclose, and noctx linters with complexity threshold 15.
Update Makefile run target to pass OJS_ALLOW_INSECURE_NO_AUTH=true for
local development since auth is now enforced by default.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,10 +6,16 @@ linters:
     - unused
     - ineffassign
     - gosimple
+    - gocyclo
+    - unparam
+    - bodyclose
+    - noctx
 
 linters-settings:
   errcheck:
     check-blank: false
+  gocyclo:
+    min-complexity: 15
 
 issues:
   exclude-dirs:
