ci: add Kafka+Redis services to CI, coverage threshold, and auth fixes
Add Kafka (KRaft) and Redis service containers to the CI test job so
integration tests can run against real infrastructure. Add a 40%
coverage threshold check. Update conformance workflow to pass
OJS_ALLOW_INSECURE_NO_AUTH=true when starting the server. Add
OTEL_EXPORTER_OTLP_ENDPOINT env var to Dockerfile. Set
OJS_ALLOW_INSECURE_NO_AUTH=true in both docker-compose services.
Update .env.example with authentication config and security warning.

--- a/.github/workflows/conformance.yml
+++ b/.github/workflows/conformance.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Start server
         working-directory: openjobspec/ojs-backend-kafka
         run: |
-          KAFKA_BROKERS=localhost:9092 REDIS_URL=redis://localhost:6379 ./bin/ojs-server &
+          OJS_ALLOW_INSECURE_NO_AUTH=true KAFKA_BROKERS=localhost:9092 REDIS_URL=redis://localhost:6379 ./bin/ojs-server &
           sleep 3
           curl -sf http://localhost:8080/ojs/v1/health
 
