--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,21 @@ REDIS_URL=redis://localhost:6379
 # Kafka Options
 OJS_KAFKA_USE_QUEUE_KEY=false
 OJS_KAFKA_EVENTS_ENABLED=true
+
+# Authentication
+# Set a strong API key for any shared/non-local environment.
+OJS_API_KEY=REPLACE_WITH_LONG_RANDOM_API_KEY
+# ┌─────────────────────────────────────────────────────────────────────┐
+# │ ⚠️  SECURITY WARNING                                               │
+# │                                                                     │
+# │ OJS_ALLOW_INSECURE_NO_AUTH disables ALL authentication.             │
+# │ This is intended ONLY for local development and testing.            │
+# │                                                                     │
+# │ In production, ALWAYS set OJS_API_KEY to a strong random value      │
+# │ and keep OJS_ALLOW_INSECURE_NO_AUTH=false (the default).            │
+# │                                                                     │
+# │ Running without authentication in production exposes your job       │
+# │ server to unauthorized access, data exfiltration, and denial        │
+# │ of service attacks.                                                 │
+# └─────────────────────────────────────────────────────────────────────┘
+OJS_ALLOW_INSECURE_NO_AUTH=false
